fixed minor issues

--- a/app/assets/stylesheets/components/step1.sass
+++ b/app/assets/stylesheets/components/step1.sass
@@ -24,6 +24,10 @@
       border: 0px
       padding: 0px
 
+      .error
+        color: #f00
+        font-size: 15px
+
       +min-screen($screen-sm)
         .row
           padding: 20px
