--- a/app/views/application/_big_footer.html.erb
+++ b/app/views/application/_big_footer.html.erb
@@ -32,8 +32,8 @@
         <ul class="menu-list">
           <li class="title"><%= Spree.t('big_footer.follow_us') %></li>
           <li class="menu-list__social">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="https://www.facebook.com/BirraForstBier" target='_blank'><i class="fa fa-facebook"></i></a>
+            <a href="https://www.youtube.com/channel/UC1EGUP3Z7V5Bpg4Sfcpz0tw" target='_blank'><i class="fa fa-youtube"></i></a>
           </li>
         </ul>
       </div>
