--- a/app/assets/stylesheets/components/product-details.sass
+++ b/app/assets/stylesheets/components/product-details.sass
@@ -99,6 +99,15 @@
         border: 0
         display: table-cell
 
+  .out-of-stock
+    -webkit-border-radius: 2
+    -moz-border-radius: 2
+    border-radius: 2px
+    color: #ffffff
+    font-size: 20px
+    background: #E6881C
+    padding: 10px 20px 10px 20px
+    text-decoration: none
 
 // bootstrap margin fix
 .product-description
