--- a/app/assets/stylesheets/components/section-boxes.sass
+++ b/app/assets/stylesheets/components/section-boxes.sass
@@ -5,7 +5,7 @@
 .section-box
   position: relative
   overflow: hidden
-  padding: 0px 6px
+  margin: 0px 6px
 
   &__content
     font-size: 62.5%
@@ -20,8 +20,9 @@
     padding: 0px
 
     &:hover
-      .section-box__icon
-        +scale(1.2)
+      .section-box__image
+        +transform(scale(1.5))
+        +transition(all 1s ease-in-out)
 
   &__icon
     +transition(all .2s ease-out)
@@ -32,6 +33,8 @@
     width: 100%
     // padding: 8px
     z-index: 1
+    transition: all 1s ease-in-out
+
 
   &__title
     font-size: 30px
