footer fonts change

--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -41,6 +41,12 @@
 
     &__menu
       margin-bottom: 30px
+  .menu-list
+    .title
+      text-transform: uppercase
+      font-weight: normal
+    li
+      font-weight: lighter
 
 // END Big Footer
 
