--- a/app/assets/stylesheets/components/components.sass
+++ b/app/assets/stylesheets/components/components.sass
@@ -8,6 +8,7 @@
 @import product-catalog
 @import product-images
 @import product-details
+@import product-description
 @import product-merchandising
 @import contacts
 @import table-cart
