--- a/app/assets/stylesheets/components/product-details.sass
+++ b/app/assets/stylesheets/components/product-details.sass
@@ -24,7 +24,7 @@
     font-weight: 400
     font-size: 35px
     text-transform: uppercase
-    color: #000
+    color: $color-green-forst
     margin: 0
     display: block
     clear: both
@@ -49,7 +49,7 @@
   &__price
     font-size: 30px
     padding: 5px 18px
-    border: 3px solid #e1e1e1
+    border: 2px solid $color-gold
     border-left: 0
     border-right: 0
     float: left
