Item cannot be shipped custom message

--- a/app/assets/stylesheets/components/checkout.sass
+++ b/app/assets/stylesheets/components/checkout.sass
@@ -81,6 +81,9 @@
       color: $color-green-forst
       padding-left: 20px
 
+  .order_summary_taxes
+    display: block
+
   +max-screen($screen-sm)
     &
       padding: 10px
