--- a/app/assets/stylesheets/components/banner-product.sass
+++ b/app/assets/stylesheets/components/banner-product.sass
@@ -73,10 +73,11 @@
 
   &__description
     font-size: 14px
-    color: #000
+    color: #fff
     font-weight: 300
     margin: 0
     padding: 0
+    +text-shadow(0 0 10px rgba(0,0,0,.4))
 
     +min-screen($screen-sm)
       font-size: 16px
