cambio colore della lingua disattivata perché illeggibile sul grigio

--- a/app/assets/stylesheets/components/navigation.sass
+++ b/app/assets/stylesheets/components/navigation.sass
@@ -128,7 +128,7 @@
         a
           color: #fff
       a
-        color: #c9cbcb
+        color: #888
         text-decoration: none
 
   // regole per il responsive
@@ -178,7 +178,7 @@
             content: "-"
             margin: 0px 4px
             display: inline-block
-            color: #c9cbcb
+            color: #888
 
 
 
