aggiornamento regole bottone add to cart

--- a/app/assets/stylesheets/patterns/patterns.sass
+++ b/app/assets/stylesheets/patterns/patterns.sass
@@ -37,14 +37,16 @@
     background: lighten($color-green-forst, 4%)
 
 .btn-add-to-cart
-  background: #e1e1e1
-  color: #000000
+  background: #46521b
+  color: #fff
   font-weight: 300
   text-align: center
   border: 1px solid #bbb
+  width: 260px
+  text-transform: uppercase
 
   &:hover
-    background: darken(#e1e1e1, 4%)
+    background: #536120
 
 .btn-grey
   vertical-align: top
