--- a/app/assets/stylesheets/components/section-boxes.sass
+++ b/app/assets/stylesheets/components/section-boxes.sass
@@ -5,7 +5,7 @@
 .section-box
   position: relative
   overflow: hidden
-  margin: 0px 6px
+  margin: 6px
 
   &__content
     font-size: 62.5%
@@ -18,6 +18,7 @@
   &__link
     display: block
     padding: 0px
+    position: relative
 
     &:hover
       .section-box__image
@@ -33,6 +34,7 @@
     width: 100%
     // padding: 8px
     z-index: 1
+    display: block
     transition: all 1s ease-in-out
 
 
