aggiornate regole bottone checkout

--- a/app/assets/stylesheets/patterns/patterns.sass
+++ b/app/assets/stylesheets/patterns/patterns.sass
@@ -72,9 +72,8 @@
   font-weight: 600
   text-transform: uppercase
   text-align: center
-  border: 0
-  font-size: 18px
-  padding: 15px 24px
+  border: 1px solid #dad8ca
+  padding: 10px 20px
 
   +max-screen($screen-md)
     display: block
