Add starting from feature

--- a/app/assets/stylesheets/components/product-catalog.sass
+++ b/app/assets/stylesheets/components/product-catalog.sass
@@ -65,9 +65,12 @@
       height: 60px
 
   &__price
-    p
-      font-weight: 500
-      font-size: 25px
-      margin: 15px 0 5px
-      color: #000
-      text-decoration: none
+    font-weight: 500
+    font-size: 25px
+    margin: 15px 0 5px
+    color: #000
+    text-decoration: none
+
+  &__starting-from
+    font-size: 0.6em
+    display: inline-block
