--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -8,10 +8,11 @@
             <div class="row">
               <div class="static-page">
                 <div class="col-md-8 col-md-offset-2">
-                  <h2><%= Spree.t('privacy.title') %></h2>
-                  <h3><%= Spree.t('privacy.subtitle') %></h3>
+                <div class="col-md-8 col-md-offset-2">
+                  <h2><%= Spree.t('pages.privacy.title') %></h2>
+                  <h3><%= Spree.t('pages.privacy.subtitle') %></h3>
                   <p>
-                  <%= Spree.t('privacy.body_html') %>
+                  <%= Spree.t('pages.privacy.body_html') %>
                   </p>
                 </div>
               </div>
