--- a/app/views/pages/sales_conditions.html.erb
+++ b/app/views/pages/sales_conditions.html.erb
@@ -8,10 +8,10 @@
             <div class="row">
               <div class="static-page">
                 <div class="col-md-8 col-md-offset-2">
-                  <h2><%= Spree.t('sales_conditions.title') %></h2>
-                  <h3><%= Spree.t('sales_conditions.subtitle') %></h3>
+                  <h2><%= Spree.t('pages.sales_conditions.title') %></h2>
+                  <h3><%= Spree.t('pages.sales_conditions.subtitle') %></h3>
                   <p>
-                  <%= Spree.t('sales_conditions.body_html') %>
+                  <%= Spree.t('pages.sales_conditions.body_html') %>
                   </p>
                 </div>
               </div>
