--- a/app/views/spree/products/show.html.erb
+++ b/app/views/spree/products/show.html.erb
@@ -23,7 +23,7 @@
 
         <div class="col-md-5 col-md-offset-1 col-sm-6">
           <div class="product-details">
-            <h1 class="product-details__title"><%= @product.name %></h1>
+            <h1 class="product-details__title"><%= @product.name.html_safe %></h1>
 
             <div id="cart-form" data-hook="cart_form">
               <%= render :partial => 'cart_form' %>
