--- a/app/views/spree/shared/_order_details.html.erb
+++ b/app/views/spree/shared/_order_details.html.erb
@@ -69,7 +69,7 @@
                           <% end %>
                         </div>
                         <div class="table-cart__content title-description col-md-4 " data-hook="order_item_description">
-                          <h1><%= item.variant.product.name %></h1>
+                          <h1><%= item.variant.product.name.html_safe %></h1>
                           <p><%= truncated_product_description(item.variant.product) %></p>
                           <%= "(" + item.variant.options_text + ")" unless item.variant.option_values.empty? %>
                         </div>
