--- a/app/views/spree/address/_form.html.erb
+++ b/app/views/spree/address/_form.html.erb
@@ -38,30 +38,15 @@
       </span>
     </div>
 
-    <% if Spree::Config[:address_requires_state] %>
-      <div class="form-field col-md-4 col-sm-6" id=<%="#{address_id}state" %>>
-        <% have_states = !address.country.states.empty? %>
-        <%= form.label :state, Spree.t(:state) %><span class='required' id=<%="#{address_id}state-required"%>>*</span><br/>
+    <div class="form-field col-md-4 col-sm-6" id=<%="#{address_id}state" %>>
+      <%= form.label :state, Spree.t(:state) %><span class='required' id=<%="#{address_id}state-required"%>>*</span><br/>
 
-        <% state_elements = [
-           form.collection_select(:state_id, address.country.states,
-                              :id, :name,
-                              {:include_blank => true},
-                              {:class => have_states ? 'required' : 'hidden',
-                              :disabled => !have_states}) +
-           form.text_field(:state_name,
-                              :class => !have_states ? 'required' : 'hidden',
-                              :disabled => have_states)
-           ].join.gsub('"', "'").gsub("\n", "")
-        %>
-        <%= javascript_tag do -%>
-          $('#<%="#{address_id}state" %>').append("<%== state_elements %>");
-        <% end %>
-      </div>
-        <noscript>
-          <%= form.text_field :state_name, :class => 'required' %>
-        </noscript>
-    <% end %>
+      <%= form.collection_select(:state_id, [],
+                            :id, :name,
+                            {:include_blank => true},
+                            {:class => 'required',
+                            :disabled => false}) %>
+    </div>
 
     <div class="form-field col-md-4 col-sm-6" id=<%="#{address_id}zipcode" %>>
       <%= form.label :zipcode, Spree.t(:zip) %><% if address.require_zipcode? %><span class="required">*</span><br /><% end %>
