--- a/app/views/spree/address/_form.html.erb
+++ b/app/views/spree/address/_form.html.erb
@@ -34,19 +34,25 @@
     <div class="form-field col-md-4 col-sm-6" id=<%="#{address_id}country" %>>
       <%= form.label :country_id, Spree.t(:country) %><span class="required">*</span><br />
       <span id=<%="#{address_id}country-selection" %>>
-        <%= form.collection_select :country_id, available_countries, :id, :name, {}, {:class => 'required'} %>
+        <%= form.collection_select :country_id, available_countries, :id, :name, {selected: "110"}, {:class => 'required'} %>
       </span>
     </div>
 
-    <div class="form-field col-md-4 col-sm-6" id=<%="#{address_id}state" %>>
-      <%= form.label :state, Spree.t(:state) %><span class='required' id=<%="#{address_id}state-required"%>>*</span><br/>
+    <% if Spree::Config[:address_requires_state] %>
+      <div class="form-field col-md-4 col-sm-6" id=<%="#{address_id}state" %>>
+        <%= form.label :state, Spree.t(:state) %><span class='required' id=<%="#{address_id}state-required"%>>*</span><br/>
 
-      <%= form.collection_select(:state_id, [],
-                            :id, :name,
-                            {:include_blank => true},
-                            {:class => 'required',
-                            :disabled => false}) %>
-    </div>
+        <%= form.collection_select(:state_id, [],
+                              :id, :name,
+                              {:include_blank => false},
+                              {:class => 'hidden',
+                              :disabled => true}) %>
+        <%= form.text_field(:state_name,
+                            :class => 'required',
+                            :disabled => true) %>
+
+      </div>
+    <% end %>
 
     <div class="form-field col-md-4 col-sm-6" id=<%="#{address_id}zipcode" %>>
       <%= form.label :zipcode, Spree.t(:zip) %><% if address.require_zipcode? %><span class="required">*</span><br /><% end %>
