--- a/app/views/spree/shared/_products.html.erb
+++ b/app/views/spree/shared/_products.html.erb
@@ -1,5 +1,12 @@
 <div class="container">
   <div class="row">
+    <% if @taxon.id == 2 %>
+      <div class="col-md-12 christmas_banner">
+        <img class="visible-xs img-responsive" src="">
+        <img class="visible-sm img-responsive" src="">
+        <img class="visible-md visible-lg img-responsive" src="">
+      <div>
+    <% end %>
 
     <% if products.any? %>
       <% products.each do |product| %>
