--- a/app/assets/stylesheets/components/product-catalog.sass
+++ b/app/assets/stylesheets/components/product-catalog.sass
@@ -35,6 +35,9 @@
 .product-catalog-wrapper
   text-decoration: none
 
+.product-catalog-banner
+  padding-bottom: 20px
+
 .product-catalog
   margin: 0px 20px 40px 20px
   border: 1px solid #dad8ca
