adds kgs to weight

--- a/app/views/spree/admin/products/_form.html.erb
+++ b/app/views/spree/admin/products/_form.html.erb
@@ -112,7 +112,11 @@
     <div id="shipping_specs">
       <% [:height, :width, :depth, :weight].each_with_index do |field, index| %>
         <div id="shipping_specs_<%= field %>_field" data-hook="admin_product_form_<%= field %>" class="field two columns <%= index.even? ? 'alpha' : 'omega' %>">
-          <%= f.label field %>
+          <% if field == :weight %>
+            <%= f.label "#{Spree.t(field)} (kg)" %>
+          <% else %>
+            <%= f.label field %>
+          <% end %>
           <%= f.text_field field, value: number_with_precision(@product.send(field), precision: 2) %>
         </div>
       <% end %>
