--- a/app/views/spree/taxons/show.html.erb
+++ b/app/views/spree/taxons/show.html.erb
@@ -16,7 +16,7 @@
           <% if taxon.children.any? %>
             <%= render partial: 'subtaxons', locals: { taxons: taxon.children } %>
           <% else %>
-            <%= render partial: 'spree/shared/products', locals: { products: taxon.products, taxon: taxon } %>
+            <%= render partial: 'spree/shared/products', locals: { products: @products, taxon: taxon } %>
           <% end %>
 
         </div>
