--- a/app/views/spree/checkout/payment/_paypal.html.erb
+++ b/app/views/spree/checkout/payment/_paypal.html.erb
@@ -1,4 +1,4 @@
-<% protocol = (Rails.env == "production") ? "https" : "http" %>
+<% protocol = Rails.env.production? ? "https" : "http" %>
 <%= link_to(image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), paypal_express_url(:payment_method_id => payment_method.id, :protocol => protocol), :method => :post, :id => "paypal_button") %>
 
 <script>
