--- a/app/views/spree/admin/taxon_banner/edit.html.erb
+++ b/app/views/spree/admin/taxon_banner/edit.html.erb
@@ -19,39 +19,68 @@
         <% end %>
       </div>
 
-      <div data-hook="admin_taxon_banner_form_img_desk">
-        <%= f.field_container :desktop_size do %>
-          <%= f.label :desktop_size %>
-          <%= f.file_field :desktop_size, :class => 'fullwidth title' %>
-          <%= f.error_message_on :desktop_size %>
-        <% end %>
-        <%= "Immagine corrente: #{@banner.desktop_size_file_name || 'Nessuna'}" %>
-      </div>
-
-      <div data-hook="admin_taxon_banner_form_img_tablet">
-        <%= f.field_container :tablet_size do %>
-          <%= f.label :tablet_size %>
-          <%= f.file_field :tablet_size, :class => 'fullwidth title' %>
-          <%= f.error_message_on :tablet_size %>
-        <% end %>
-        <%= "Immagine corrente: #{@banner.tablet_size_file_name || 'Nessuna'}" %>
-      </div>
-
-      <div data-hook="admin_taxon_banner_form_img_mobi">
-        <%= f.field_container :mobile_size do %>
-          <%= f.label :mobile_size %>
-          <%= f.file_field :mobile_size, :class => 'fullwidth title' %>
-          <%= f.error_message_on :mobile_size %>
-        <% end %>
-        <%= "Immagine corrente: #{@banner.mobile_size_file_name || 'Nessuna'}" %>
-      </div>
-
       <div data-hook="admin_taxon_banner_form_enabled">
         <%= f.field_container :enabled do %>
           <%= f.label :enabled %>
           <%= f.check_box :enabled, :class => 'fullwidth title' %>
           <%= f.error_message_on :enabled %>
         <% end %>
+      </div>
+
+      <div data-hook="admin_taxon_banner_form_img_desk_it">
+        <%= f.field_container :desktop_size do %>
+          <%= f.label :desktop_size_it %>
+          <%= f.file_field :desktop_size, :class => 'fullwidth title' %>
+          <%= f.error_message_on :desktop_size %>
+        <% end %>
+        <%= "Immagine corrente: #{@banner.desktop_size_file_name || 'Nessuna'}" %>
+      </div>
+
+      <div data-hook="admin_taxon_banner_form_img_tablet_it">
+        <%= f.field_container :tablet_size do %>
+          <%= f.label :tablet_size_it %>
+          <%= f.file_field :tablet_size, :class => 'fullwidth title' %>
+          <%= f.error_message_on :tablet_size %>
+        <% end %>
+        <%= "Immagine corrente: #{@banner.tablet_size_file_name || 'Nessuna'}" %>
+      </div>
+
+      <div data-hook="admin_taxon_banner_form_img_mobi_it">
+        <%= f.field_container :mobile_size do %>
+          <%= f.label :mobile_size_it %>
+          <%= f.file_field :mobile_size, :class => 'fullwidth title' %>
+          <%= f.error_message_on :mobile_size %>
+        <% end %>
+        <%= "Immagine corrente: #{@banner.mobile_size_file_name || 'Nessuna'}" %>
+      </div>
+
+      <hr style="height: 1px;background: #333;border: 0;">
+
+      <div data-hook="admin_taxon_banner_form_img_desk_de">
+        <%= f.field_container :desktop_size_de do %>
+          <%= f.label :desktop_size_de %>
+          <%= f.file_field :desktop_size_de, :class => 'fullwidth title' %>
+          <%= f.error_message_on :desktop_size_de %>
+        <% end %>
+        <%= "Immagine corrente: #{@banner.desktop_size_de_file_name || 'Nessuna'}" %>
+      </div>
+
+      <div data-hook="admin_taxon_banner_form_img_tablet_de">
+        <%= f.field_container :tablet_size_de do %>
+          <%= f.label :tablet_size_de %>
+          <%= f.file_field :tablet_size_de, :class => 'fullwidth title' %>
+          <%= f.error_message_on :tablet_size_de %>
+        <% end %>
+        <%= "Immagine corrente: #{@banner.tablet_size_de_file_name || 'Nessuna'}" %>
+      </div>
+
+      <div data-hook="admin_taxon_banner_form_img_mobi_de">
+        <%= f.field_container :mobile_size_de do %>
+          <%= f.label :mobile_size_de %>
+          <%= f.file_field :mobile_size_de, :class => 'fullwidth title' %>
+          <%= f.error_message_on :mobile_size_de %>
+        <% end %>
+        <%= "Immagine corrente: #{@banner.mobile_size_de_file_name || 'Nessuna'}" %>
       </div>
 
       <div data-hook="admin_taxon_banner_form_submit">
