--- a/app/views/spree/admin/orders/show.html.erb
+++ b/app/views/spree/admin/orders/show.html.erb
@@ -8,7 +8,7 @@
     <% if Spree::Order.checkout_step_names.include?(:delivery) %>
       <% @order.shipments.order(:created_at).each do |shipment| %>
 
-        <% manifest_items = Spree::ShippingManifest.new(inventory_units: shipment.inventory_units.where(carton_id: nil)).items %>
+        <% manifest_items = Spree::ShippingManifest.new(inventory_units: shipment.inventory_units).items %>
           <div id="<%= "shipment_#{shipment.id}" %>" class="js-shipment-edit" data-hook="admin_shipment_form">
           <table class="stock-contents shipment index" data-hook="stock-contents">
             <colgroup>
