--- a/app/views/spree/order_mailer/confirm_email.html.erb
+++ b/app/views/spree/order_mailer/confirm_email.html.erb
@@ -61,7 +61,7 @@
           <table class="twelve columns status">
             <tr>
             <td>
-              <h6>Ordine #<%= @order[:id] %></h6>
+              <h6>Ordine #<%= @order[:number] %></h6>
               <strong>Stato:</strong> Completato
             </td>
             <td class="expander"></td>
