--- a/app/assets/stylesheets/components/product-merchandising.sass
+++ b/app/assets/stylesheets/components/product-merchandising.sass
@@ -51,10 +51,13 @@
     margin: 0 auto;
     border: 1px solid #bbb;
     background: #fff;
+    overflow-x: hidden;
 
     img
-      height: 100%
-      width: 100%
+      height: 100%;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
 
   &__name
     p
