and, of course, the fix

--- a/app/assets/stylesheets/components/product-merchandising.sass
+++ b/app/assets/stylesheets/components/product-merchandising.sass
@@ -51,7 +51,7 @@
     margin: 0 auto;
     border: 1px solid #bbb;
     background: #fff;
-    overflow-x: hidden;
+    overflow: hidden;
 
     img
       height: 100%;
